--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -250,10 +250,39 @@ tcpdump -x -s 100 -c 4 udp port 520
     This exercise is on ICMP router discovery.
     
     Connect the routers and hosts and change the host IP addresses as shown in Fig. 4.12.
+
+    \begin{figure}[H]
+        \centering
+        \begin{tikzpicture}
+            \draw (0,0) node[draw,align=center,rounded corners] (s) {Core\\Switch};
+            \draw (0,2) node[draw] (h4) {h4} +(0,0.5) node {\scriptsize 66.104/24};
+            \draw ({sqrt(2)},{sqrt(2)}) node[draw] (h1) {h1} +(0,0.5) node {\scriptsize 66.101/24};
+            \draw (2,0) node[draw] (h2) {h2} +(0,-0.5) node {\scriptsize 66.102/24};
+            \draw (-{sqrt(2)},{sqrt(2)}) node[draw] (h3) {h3} +(0,0.5) node {\scriptsize 66.103/24};
+            \draw (-{sqrt(2)},-{sqrt(2)}) node[draw] (h5) {h5} +(0,-0.5) node {\scriptsize 66.105/24};
+            \draw (0,-2) node[draw] (h6) {h6} +(0,-0.5) node {\scriptsize 66.106/24};
+            \draw ({sqrt(2)},-{sqrt(2)}) node[draw] (h7) {h7} +(0,-0.5) node {\scriptsize 66.107/24};
+            \draw (-3.25,2) node[draw,align=center,rounded corners] (r3) {Router 3} +(0,-0.5) node {\scriptsize\textit{ethernet1} 66.3/24~~~};
+            \draw (-3.25,-2) node[draw,align=center,rounded corners] (r4) {Router 4} +(0,0.5) node {\scriptsize\textit{ethernet1} 66.4/24~~~};
+            \draw (-2.5,0) node[draw] (h0) {h0} +(0,-0.5) node {\scriptsize 66.100/24};
+            
+            \draw[dotted] (s) -- +(2.5,1) node[anchor=south west] {\scriptsize 128.238.66.0/24 subnet};
+            \draw (r3) -- +(0,-0.75) -- (s);
+            \draw (r4) -- +(0,0.75) -- (s);
+            \draw (s) -- (h0);
+            \draw (h1) -- (s);
+            \draw (h2) -- (s);
+            \draw (h3) -- (s);
+            \draw (h4) -- (s);
+            \draw (h5) -- (s);
+            \draw (h6) -- (s);
+            \draw (h7) -- (s);
+        \end{tikzpicture}
+        \caption{\textit{Figure 4.12} Network configuration of the ICMP router discovery experiment}        
+    \end{figure}
     
-    Telnet to the routers, change the IP address of the ethernet1 interfaces as shown in Fig. 4.12. Enable ICMP router discovery on these two interfaces by the following
-    
-    \textit{Interface Configuration command:}
+    Telnet to the routers, change the IP address of the \textit{ethernet1} interfaces as shown in Fig. 4.12. Enable ICMP router discovery on these two interfaces by the following
+    interface configuration command:
     \begin{lstlisting}[language={cisco}]
         Router(config-if)# ip irdp.
     \end{lstlisting}
@@ -358,7 +387,7 @@ Router(config-router)# network address wildcard-mask area area-id
             \draw[thick] (-3,2) -- +(6,0) node[pos=0.5,below] {\scriptsize 128.238.65.0 subnet};
             \draw[thick] (-3.5,-2) -- +(7,0) node[pos=0.5,above] {\scriptsize 128.238.63.0 subnet};
         \end{tikzpicture}
-        \caption{\textit{Figure 4.11} Network Configuration for OSPF exercises, static routing experiments and \lstinline{traceroute} experiment}
+        \caption{\textit{Figure 4.13} Network Configuration for OSPF exercises, static routing experiments and \lstinline{traceroute} experiment}
     \end{figure}
 
 \section{OSPF Messages}
