add reference to book and bugfix

--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -1,6 +1,10 @@
 \documentclass{../UTNetLab}
 
 \title{A Single Segment Network}
+\newcommand\refrence{
+   S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “A single segment network,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 43–60.
+}
+
 \begin{document}
 \part{Network Interface Exercises}
     The following exercises use the single segment network topology shown in Fig. 1.3.
