--- a/6 TCP study/TCP and its applications.tex
+++ b/6 TCP study/TCP and its applications.tex
@@ -1,6 +1,10 @@
 \documentclass{../UTNetLab}
 
 \title{TCP and Its Applications}
+\newcommand\reference{
+   S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “TCP study,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 111–133.
+}
+
 \begin{document}
 \part{Exercises on TCP Connection Control}
     Like previous lab, connect two host with one hub together.
