--- a/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
+++ b/3 Bridges, LANs and the Cisco IOS/Bridges, LANs and the Cisco IOS.tex
@@ -1,6 +1,10 @@
 \documentclass{../UTNetLab}
 
 \title{Bridges, LANs and the Cisco~IOS}
+\newcommand\refrence{
+   S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Bridges, LANs and the Cisco IOS,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 61–76.
+}
+
 \begin{document}
 \part{Exercises on Cisco~IOS}
     Each group in the lab uses two workstations, a bridge, and two hubs, which are required to be connected as shown in Fig. 3.7, Table 3.2 and Table 3.3.
@@ -33,9 +37,9 @@
         \centering
         \begin{tikzpicture}
             \node[draw] (h1) at (-4,0){Host\textsubscript{A}};
-            \node[draw,rounded corners] (hub2) at (-2.5,0){Hub 2};
+            \node[draw,rounded corners] (hub2) at (-2.2,0){Hub 2};
             \node[draw,rounded corners,align=center] (router) at (0,0){Router\\as\\Brdige};
-            \node[draw,rounded corners] (hub1) at (2.5,0){Hub 1};
+            \node[draw,rounded corners] (hub1) at (2.2,0){Hub 1};
             \node[draw] (h0) at (4,0){Host\textsubscript{B}};
         
             \draw (h0) -- (hub1);
@@ -97,7 +101,7 @@ config term
 Ctrl+Z
     \end{lstlisting}
     
-    Run \lstinline{tcpdump -en ip proto 1} on your machine, and your partner’s machine. Send \lstinline{ping} messages to your partner’s machine: \lstinline[emph={your-host, remote-host}]{ping -sv remote-machine}.
+    Run \lstinline{tcpdump -en ip proto 1} on your machine, and your partner’s machine. Send \lstinline{ping} messages to your partner’s machine: \lstinline[emph={remote-machine}]{ping -sv remote-machine}.
     After receiving the tenth echo reply, quit the \lstinline{ping} process, and save the \lstinline{tcpdump} outputs from both machines.
 
     During this exercise, don’t run \lstinline{ping} programs at the same time. For clean results, do your experiments in turn.
@@ -142,8 +146,8 @@ Ctrl+Z
                 rectangle ++(1,1) node[pos=0.5] {\Huge 1} ++(-0.5*1,-1) |- +(0.5,-1*4) node[anchor=west] {\huge Message Type} ++(0.5*1,0)
                 rectangle ++(1,1) node[pos=0.5] {\Huge 1} ++(-0.5*1,-1) |- +(0.5,-1*3) node[anchor=west] {\huge Flags} ++(0.5*1,0)
                 rectangle ++(8,1) node[pos=0.5] {\Huge 8} ++(-0.5*8,-1) |- +(0.5,-1*2) node[anchor=west] {\huge Root ID} ++(0.5*8,0)
-                rectangle ++(4,1) node[pos=0.5] {\Huge 4} ++(-0.5*4,-1) |- +(0,-1*1) node[anchor=north] {\huge Root Path Cost} ++(0.5*4,0)
-                rectangle ++(8,1) node[pos=0.5] {\Huge 8} ++(-0.5*8,-1) |- +(-0,-1*1) node[anchor=north] {\huge Bridge ID} ++(0.5*8,0)
+                rectangle ++(4,1) node[pos=0.5] {\Huge 4} ++(-0.5*4,-1) |- +(0,-1*1)   node[anchor=north] {\huge Root Path Cost} ++(0.5*4,0)
+                rectangle ++(8,1) node[pos=0.5] {\Huge 8} ++(-0.5*8,-1) |- +(-0,-1*1)  node[anchor=north] {\huge Bridge ID} ++(0.5*8,0)
                 rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*2) node[anchor=east] {\huge Port ID} ++(0.5*2,0)
                 rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*3) node[anchor=east] {\huge Message Age} ++(0.5*2,0)
                 rectangle ++(2,1) node[pos=0.5] {\Huge 2} ++(-0.5*2,-1) |- +(-0.5,-1*4) node[anchor=east] {\huge Maximum Age} ++(0.5*2,0)
@@ -291,7 +295,7 @@ Ctrl+Z
 
     You can also configure a router using the web browser UI. To enable the web server, login to the router and config as below  in the \textit{Global Configuration} mode. 
 
-    \begin{lstlisting}[language={cisco}]
+    \begin{lstlisting}[language={cisco},emph={netlab}]
 R1(config)# aaa new-model
 R1(config)# aaa authentication login default local
 R1(config)# aaa authorization exec default local
@@ -301,6 +305,6 @@ R1(config)# ip http secure-server
 R1(config)# ip http authentication local
     \end{lstlisting}
     
-    Next, start a web browser (e.g.\ \textit{Mozilla} in Linux, or \textit{Hotjava} in Solaris) in your host, and enter the IP address of the router interface. When prompted, enter \texttt{netlab} for password, and leave the \texttt{User Name} field blank. Then you can browse the router configuration web pages and configure the router there.
+    Next, start a web browser (e.g.\ \textit{Mozilla} in Linux, or \textit{Hotjava} in Solaris) in your host, and enter the IP address of the router interface. When prompted, enter \texttt{netlab} for user name and password. Then you can browse the router configuration web pages and configure the router there.
 
 \end{document}
