--- a/4 Static and dynamic routing/Static and Dynamic routing.tex
+++ b/4 Static and dynamic routing/Static and Dynamic routing.tex
@@ -1,7 +1,9 @@
 \documentclass{../UTNetLab}
 
 \title{Static and Dynamic Routing}
-
+\newcommand\reference{
+	S. S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Static and dynamic routing,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 77–99.
+}
 
 \begin{document}
 \part{A Simple Router Experiment}
@@ -52,7 +54,7 @@ route add -net 192.168.1.0/24 [gw 192.168.1.1] dev eth0
     \end{lstlisting}
 
     Run \lstinline{tcpdump -en} on your machine, and \lstinline{tcpdump -en} on your partner’s machine in the other subnet simultaneously:
-    \begin{lstlisting}[emph={your-host, remote-host}]
+    \begin{lstlisting}[emph={your-machine, remote-host}]
 tcpdump -en host remote-host and your-machine
     \end{lstlisting}
     Send \lstinline{ping} messages continuously to other machine:
@@ -193,7 +195,7 @@ tcpdump -x -s 100 -c 4 udp port 520
     Was a RIP packet forwarded by the routers?
     Why?
     
-    \item Draw the format of one of the saved RIP response packets from your sub- net, including the IP and UDP headers and the RIP message (see Figs 0.13, 0.14, and 4.4). Identify each field, and express their values in decimal format.
+    \item Draw the format of one of the saved RIP response packets from your sub-net, including the IP and UDP headers and the RIP message (see Figs 0.13, 0.14, and 4.4). Identify each field, and express their values in decimal format.
     
     \item For the other seven RIP response packets collected, explain the contents of the RIP messages only, excluding IP and UDP headers.
 
@@ -254,7 +256,8 @@ tcpdump -x -s 100 -c 4 udp port 520
     \begin{figure}[H]
         \centering
         \begin{tikzpicture}
-            \draw (0,0) node[draw,align=center,rounded corners] (s) {Core\\Switch};
+            \draw (0,0) node[draw,align=center,rounded corners] (s1) {Switch 1};
+            \draw (-2.75,0) node[draw,align=center,rounded corners] (s2) {Switch 2};
             \draw (0,2) node[draw] (h4) {h4} +(0,0.5) node {\scriptsize 66.104/24};
             \draw ({sqrt(2)},{sqrt(2)}) node[draw] (h1) {h1} +(0,0.5) node {\scriptsize 66.101/24};
             \draw (2,0) node[draw] (h2) {h2} +(0,-0.5) node {\scriptsize 66.102/24};
@@ -262,21 +265,22 @@ tcpdump -x -s 100 -c 4 udp port 520
             \draw (-{sqrt(2)},-{sqrt(2)}) node[draw] (h5) {h5} +(0,-0.5) node {\scriptsize 66.105/24};
             \draw (0,-2) node[draw] (h6) {h6} +(0,-0.5) node {\scriptsize 66.106/24};
             \draw ({sqrt(2)},-{sqrt(2)}) node[draw] (h7) {h7} +(0,-0.5) node {\scriptsize 66.107/24};
-            \draw (-3.25,2) node[draw,align=center,rounded corners] (r3) {Router 3} +(0,-0.5) node {\scriptsize\textit{ethernet1} 66.3/24~~~};
-            \draw (-3.25,-2) node[draw,align=center,rounded corners] (r4) {Router 4} +(0,0.5) node {\scriptsize\textit{ethernet1} 66.4/24~~~};
-            \draw (-2.5,0) node[draw] (h0) {h0} +(0,-0.5) node {\scriptsize 66.100/24};
+            \draw (-3.5,2) node[draw,align=center,rounded corners] (r3) {Router 3} +(0,-0.5) node {\scriptsize\textit{ethernet1} 66.3/24~~~};
+            \draw (-3.5,-2) node[draw,align=center,rounded corners] (r4) {Router 4} +(0,0.5) node {\scriptsize\textit{ethernet1} 66.4/24~~~};
+            \draw (-5,0) node[draw] (h0) {h0} +(0,-0.5) node {\scriptsize 66.100/24};
             
-            \draw[dotted] (s) -- +(2.5,1) node[anchor=south west] {\scriptsize 128.238.66.0/24 subnet};
-            \draw (r3) -- +(0,-0.75) -- (s);
-            \draw (r4) -- +(0,0.75) -- (s);
-            \draw (s) -- (h0);
-            \draw (h1) -- (s);
-            \draw (h2) -- (s);
-            \draw (h3) -- (s);
-            \draw (h4) -- (s);
-            \draw (h5) -- (s);
-            \draw (h6) -- (s);
-            \draw (h7) -- (s);
+            \draw[dotted] (s1) -- +(2.5,1) node[anchor=south west] {\scriptsize 128.238.66.0/24 subnet};
+            \draw (r3) -- +(0,-0.75) -- (s2);
+            \draw (r4) -- +(0,0.75) -- (s2);
+            \draw (s1) -- (s2);
+            \draw (h0) -- (s2);
+            \draw (h1) -- (s1);
+            \draw (h2) -- (s1);
+            \draw (h3) -- (s1);
+            \draw (h4) -- (s1);
+            \draw (h5) -- (s1);
+            \draw (h6) -- (s1);
+            \draw (h7) -- (s1);
         \end{tikzpicture}
         \caption{\textit{Figure 4.12} Network configuration of the ICMP router discovery experiment}        
     \end{figure}
