--- a/7 Multicast and realtime service/Multicast and realtime service.tex
+++ b/7 Multicast and realtime service/Multicast and realtime service.tex
@@ -1,6 +1,10 @@
 \documentclass{../UTNetLab}
 
 \title{Multicast and Realtime Service}
+\newcommand\reference{
+   S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “Multicast and realtime service,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 134–158.
+}
+
 \begin{document}
 \part{Simple Multicast Exercises}
     For all the exercises in this section, the network topology is given in Fig.
