--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -1,7 +1,7 @@
 \documentclass{../UTNetLab}
 
 \title{A Single Segment Network}
-\newcommand\refrence{
+\newcommand\reference{
    S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “A single segment network,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 43–60.
 }
 
