--- a/5 UDP and its applications/UDP and its applications.tex
+++ b/5 UDP and its applications/UDP and its applications.tex
@@ -1,7 +1,7 @@
 \documentclass{../UTNetLab}
 
 \title{UDP and Its Applications}
-\newcommand\refrence{
+\newcommand\reference{
    S. Panwar, S. Mao, J.-dong Ryoo, and Y. Li, “UDP and its applications,” in TCP/IP Essentials: A Lab-Based Approach, Cambridge: Cambridge University Press, 2004, pp. 100–110.
 }
 
