--- a/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
+++ b/0 Network and TCP-IP overview/Network and TCP-IP overview.fa.tex
@@ -49,7 +49,7 @@ config term
 انواع ارتباطات سیمی
 
 \subsection{بی سیم}
-	اتصلاتی همانند \textLR{WiFi} و \textLR{Bluetooth}.
+	اتصالاتی همانند \textLR{WiFi} و \textLR{Bluetooth}.
 \subsection{نوری}
 \begin{report}
 \item نمونه گزارش
