--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -12,7 +12,7 @@
         \begin{minipage}{0.48\textwidth}
             \begin{flushleft}
                 \begin{table}[H]
-                    \caption{\textit{Table 1.2} The IP addresses of the hosts}
+                    \caption{\textbf{Table 1.2} The IP addresses of the hosts}
                     \centering
                     \begin{tabular}{ c c c }
                         \hline \hline
@@ -211,6 +211,6 @@ telnet 10.0.0.2
 
     \item What port numbers are used in \textit{h1} (local machine) for the first and second \lstinline{telnet}, respectively?
 
-    \item Explain briefly what a \lstinline{socket} is.
+    \item Explain briefly what a \lstinline[language=bash]{socket} is.
     \end{report}
 \end{document}
